# paper-image

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/memory/: MEMORY.md  project_frontend_demo.md  user_agent_dispatch.md
config/v3/: settings.yaml
docs/: competitive-analysis.md  development-estimate-roadmap.md  frontend-demo-spec.md  frontend-phase2-roadmap.md  frontend-phase3-roadmap.md  implementation-slices.md  module-catalog.md  module-discipline.md  open-questions.md  pricing-strategy.md  product-plan.md  roadmap.md
docs/plans/: issue-1-fe-01-01-init-nextjs.md  issue-58-be-01-02-projects-crud-tus-upload.md  issue-58-projects-crud-tus-upload.md
docs/superpowers/plans/: 2026-06-01-paper-image-mvp-skeleton.md
features/: catalog.yaml
frontend/: .env.example  .gitignore  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/projects/: page.tsx
frontend/src/lib/: constants.ts  utils.ts
frontend/src/mocks/fixtures/: findings.json  projects.json
frontend/src/types/: api.ts  domain.ts
src/paper_image/: __init__.py  cli.py  domain.py  pipeline.py
tests/: test_domain.py  test_pipeline.py
